# mcp-attr

./: Cargo.toml
codegen/: Cargo.toml
mcp-attr/src/: schema_ext.rs
