[package]
name = "mcp-attr-codegen"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
schemars = "0.8.22"
anyhow = "1.0.97"
serde_json = "1.0.140"
typify = "0.3.0"
quote = "1.0.39"
proc-macro2 = "1.0.94"
syn = { version = "2.0.99", features = ["full", "extra-traits"] }
macro-rules-rt = "0.1.1"
